--- a/index.html
+++ b/index.html
@@ -10,23 +10,38 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="main">
+    <section class="all">
         <header class="header">
-            <h1>Manage Employees</h1>
-            <button class="addBttn"> Add new employee</button c>
+            <h1>Manage <strong>Employees</strong></h1>
+            <button class="addBttn">
+                 <i class="material-icons">&#xE147;</i> 
+                 Add New Employee
+            </button>
         </header>
-        <input type="text">
+        <article class="mainSection">
+            <input type="text"placeholder="Filter..." class="searchBar">
 
-        <table class="employees-list">
-            <tr>     
-                <th> checkbox</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Address</th>
-                <th>Phone</th>
-                <th>Actions</th>
-            </tr>
-        </table>
+            <table class="employees-list">
+                <thead> 
+                    <tr>
+                        <th>
+                            <span>
+                            <input type="checkbox">
+                            </span>
+                        </th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Address</th>
+                        <th>Phone</th>
+                        <th>Actions</th>
+                    </tr>  
+                </thead>
+                <tbody>
+
+                </tbody>
+                </tr>
+            </table>
+        </article>
     </section>
 </body>
 </html>
