script en el html

--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
                 </tbody>
                 </tr>
             </table>
+            
         </article>
     </section>
     <script src="script/variables.js"></script>
+    <script src="script/get.js"></script>
+    <script src="script/edit.js"></script>
+    <script src="script/post.js"></script>
+    <script src="script/delete.js"></script>
 </body>
 </html>
