--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
@@ -38,7 +41,7 @@
                         <th>Actions</th>
                     </tr>  
                 </thead>
-                <tbody>
+                <tbody class="employees-list-body">
 
                 </tbody>
                 </tr>
@@ -47,6 +50,8 @@
         </article>
     </section>
     <script src="script/variables.js"></script>
+    <script src="script/printList.js"></script>
+
     <script src="script/get.js"></script>
     <script src="script/edit.js"></script>
     <script src="script/post.js"></script>
