--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input type="text"placeholder="Filter..." class="searchBar">
 
             <table class="employees-list">
-                <thead> 
+                <thead class="employees-list-head"> 
                     <tr>
                         <th>
                             <span>
