--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </article>
     </section>
     <section id="add" class="modal">
-        <form class="card">
+        <form class="card" id="add-employee">
             <header class="card-header">
                 <h2> Add employee</h2>
                 <i class="fa fa-times"></i>
@@ -71,6 +71,35 @@
                 <div>
                     <label>Phone</label>
                     <input id="add-phone" class ="input-phone"type="text">
+                </div>
+
+            </div>
+            <footer class="card-footer">
+                <button>Cancelar</button>
+                <button>Enviar</button>
+            </footer>
+        </form>
+        <form class="card" id="modify-employee">
+            <header class="card-header">
+                <h2> Modify employee</h2>
+                <i class="fa fa-times"></i>
+            </header>
+            <div class="card-body">
+                <div>
+                    <label>Name</label>
+                    <input id="mod-name" class ="input-name" type="text">
+                </div>
+                <div>
+                    <label>Email</label>
+                    <input id="mod-email" class ="input-email"type="email">
+                </div>
+                <div>
+                    <label>Address</label>
+                    <input id="mod-address"class ="input-address" type="text">
+                </div>
+                <div>
+                    <label>Phone</label>
+                    <input id="mod-phone" class ="input-phone"type="text">
                 </div>
 
             </div>
