--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="all">
         <header class="header">
             <h1>Manage <strong>Employees</strong></h1>
-            <button class="addBttn">
+            <button class="button" id="addBttn">
                  <i class="material-icons">&#xE147;</i> 
                  Add New Employee
             </button>
@@ -75,8 +75,8 @@
 
             </div>
             <footer class="card-footer">
-                <button>Cancelar</button>
-                <button>Enviar</button>
+                <button class="button cancelBttn">Cancel</button>
+                <button class="button submitBttn">Add</button>
             </footer>
         </form>
         <form class="card" id="modify-employee">
@@ -104,8 +104,8 @@
 
             </div>
             <footer class="card-footer">
-                <button>Cancelar</button>
-                <button>Enviar</button>
+                <button class="button cancelBttn">Cancel</button>
+                <button class="button submitBttn">Add</button>
             </footer>
         </form>
     </section>
