estilos de lista, merge branch noe

--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
 
             </div>
             <footer class="card-footer">
-                <button class="button cancelBttn">Cancel</button>
-                <button class="button submitBttn">Add</button>
+                <button class="button cancelBttn" id="cancelAdd">Cancel</button>
+                <button class="button submitBttn" id="submitAdd">Add</button>
             </footer>
         </form>
+
         <form class="card" id="modify-employee">
             <header class="card-header">
                 <h2> Modify employee</h2>
@@ -104,8 +105,8 @@
 
             </div>
             <footer class="card-footer">
-                <button class="button cancelBttn">Cancel</button>
-                <button class="button submitBttn">Add</button>
+                <button class="button cancelBttn" id="cancelMod">Cancel</button>
+                <button class="button submitBttn" id="submitMod">Add</button>
             </footer>
         </form>
     </section>
