--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <form class="card" id="add-employee">
             <header class="card-header">
                 <h2> Add employee</h2>
-                <i class="fa fa-times"></i>
+                <i class="closeBttn fa fa-times"></i>
             </header>
             <div class="card-body">
                 <div>
@@ -83,7 +83,7 @@
         <form class="card" id="modify-employee">
             <header class="card-header">
                 <h2> Modify employee</h2>
-                <i class="fa fa-times"></i>
+                <i class="closeBttn fa fa-times"></i>
             </header>
             <div class="card-body">
                 <div>
@@ -113,7 +113,7 @@
 
     <script src="script/variables.js"></script>
     <script src="script/printList.js"></script>
-
+    <script src="script/handleModals.js"></script>
     <script src="script/get.js"></script>
     <script src="script/edit.js"></script>
     <script src="script/post.js"></script>
