solucionado lo del boton que no andaba ji

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </article>
     </section>
     <section id="add" class="modal">
-        <form class="card" id="add-employee">
+        <div class="card" id="add-employee">
             <header class="card-header">
                 <h2> Add employee</h2>
                 <i class="closeBttn fa fa-times"></i>
@@ -75,12 +75,12 @@
 
             </div>
             <footer class="card-footer">
-                <button class="button cancelBttn" id="cancelAdd">Cancel</button>
-                <button class="button submitBttn" id="submitAdd">Add</button>
+                <button id="cancelAdd" class="button cancelBttn">Cancel</button>
+                <button id="submitAdd" class="button submitBttn" >Add</button>
             </footer>
-        </form>
+        </div>
 
-        <form class="card" id="modify-employee">
+        <div class="card" id="modify-employee">
             <header class="card-header">
                 <h2> Modify employee</h2>
                 <i class="closeBttn fa fa-times"></i>
@@ -108,7 +108,7 @@
                 <button class="button cancelBttn" id="cancelMod">Cancel</button>
                 <button class="button submitBttn" id="submitMod">Add</button>
             </footer>
-        </form>
+        </div>
     </section>
 
     <script src="script/variables.js"></script>
