--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             <table class="employees-list">
                 <thead class="employees-list-head"> 
                     <tr>
-                        <th>
-                            <span>
+                        <th class="th-checkbox">
+                            <label class="label-checkbox">
                             <input type="checkbox">
-                            </span>
+                            <i class="fa fa-check-square"></i>
+                            </label>
                         </th>
                         <th>Name</th>
                         <th>Email</th>
