--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <tr>
                         <th class="th-checkbox">
                             <label class="label-checkbox">
-                            <input type="checkbox">
-                            <i class="fa fa-check-square"></i>
+                                <input type="checkbox" id="check-all">
+                                <i class="fa fa-check-square"></i>
                             </label>
                         </th>
                         <th>Name</th>
@@ -117,5 +117,6 @@
     <script src="script/edit.js"></script>
     <script src="script/post.js"></script>
     <script src="script/delete.js"></script>
+    <script src="script/check.js"></script>
 </body>
 </html>
