--- a/index.html
+++ b/index.html
@@ -118,5 +118,7 @@
     <script src="script/post.js"></script>
     <script src="script/delete.js"></script>
     <script src="script/check.js"></script>
+    <script src="script/search.js"></script>
+
 </body>
 </html>
