--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
-
     <title>Manage Employees</title>
 </head>
 <body>
@@ -23,7 +22,6 @@
         </header>
         <article class="mainSection">
             <input type="text"placeholder="Filter..." class="searchBar">
-
             <table class="employees-list">
                 <thead class="employees-list-head"> 
                     <tr>
@@ -40,7 +38,6 @@
                     </tr>  
                 </thead>
                 <tbody class="employees-list-body">
-
                 </tbody>
                 </tr>
             </table>
@@ -106,6 +103,26 @@
                 <button class="button cancelBttn" id="cancelUpdt">Cancel</button>
                 <button class="button submitBttn" id="submitUpdt">Add</button>
             </footer>
+        </div>
+        <!--MENSAJE DE DELETE-->
+        <div class="modal-content">
+            <form>
+                <input id="userId" type="hidden" class="form-control" required value="2">
+                <header class="modal-header">
+                    <h4 class="modal-title">Delete Employee</h4>
+                    <i class="closeBttn fa fa-times"></i>
+                </header> 
+                <button type="button" class="close">
+                </button>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete these Records?</p>
+                    <p class="warning-text">This action cannot be undone</p>
+                </div>
+                <footer class="modal-footer">
+                    <input type="button" class="cancel-bttn" value="Cancel">
+                    <input type="submit" class="delete-bttn" value="Delete">
+                </footer>
+            </form>
         </div>
     </section>
 
