--- a/index.html
+++ b/index.html
@@ -109,23 +109,20 @@
             <form>
                 <input id="userId" type="hidden" class="form-control" required value="2">
                 <header class="modal-header">
-                    <h4 class="modal-title">Delete Employee</h4>
+                    <h2 class="modal-title">Delete Employee</h2>
                     <i class="closeBttn fa fa-times"></i>
-                </header> 
-                <button type="button" class="close">
-                </button>
+                </header>
                 <div class="modal-body">
                     <p>Are you sure you want to delete these Records?</p>
                     <p class="warning-text">This action cannot be undone</p>
                 </div>
                 <footer class="modal-footer">
-                    <input type="button" class="cancel-bttn" value="Cancel">
-                    <input type="submit" class="delete-bttn" value="Delete">
+                    <input type="button" class="button cancelBttn" value="Cancel">
+                    <input type="submit" class="deleteBttn" value="Delete">
                 </footer>
             </form>
         </div>
     </section>
-
     <script src="script/variables.js"></script>
     <script src="script/printList.js"></script>
     <script src="script/handleModals.js"></script>
