se vincula el msj de delete con el icono del tachito

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <button id="submitAdd" class="button submitBttn" >Add</button>
             </footer>
         </div>
-
+        <!--CARD DE MODIFY-->
         <div class="card" id="modify-employee">
             <header class="card-header">
                 <h2> Modify employee</h2>
@@ -105,7 +105,7 @@
             </footer>
         </div>
         <!--MENSAJE DE DELETE-->
-        <div class="modal-content">
+        <div id="delete-employee" class="modal-content">
             <form>
                 <input id="userId" type="hidden" class="form-control" required value="2">
                 <header class="modal-header">
