--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
                 <footer class="modal-footer">
                     <input type="button" class="button cancelBttn" value="Cancel">
-                    <input type="submit" class="deleteBttn" value="Delete">
+                    <input type="button" class="deleteBttn" value="Delete">
                 </footer>
             </form>
         </div>
