--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
             <footer class="card-footer">
                 <button id="cancelAdd" type="button" class="button cancelBttn">Cancel</button>
-                <button id="submitAdd" type="button" class="button submitBttn" >Add</button>
+                <button id="submitAdd" type="submit" class="button submitBttn" >Add</button>
             </footer>
         </form>
 
@@ -108,7 +108,7 @@
             </div>
             <footer class="card-footer">
                 <button class="button cancelBttn" type="button" id="cancelUpdt">Cancel</button>
-                <button class="button submitBttn" type="button" id="submitUpdt">Add</button>
+                <button class="button submitBttn" type="submit" id="submitUpdt">Add</button>
             </footer>
         </form>
         <!--MENSAJE DE DELETE-->
@@ -139,7 +139,6 @@
     <script src="script/delete.js"></script>
     <script src="script/check.js"></script>
     <script src="script/search.js"></script>
-    <script src="script/validation.js"></script>
 
 </body>
 </html>
